<resources>
    <string name="app_name">ShopSync</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor uid interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi uid magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit uid. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique uid quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer uid ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, uid elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque uid tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="my_shop_syncs">My Shop Syncs</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">logout\t\t\t\t\t</string>
    <string name="my_account">My Account</string>
    <string name="email_in_table">Email:</string>
    <string name="username_in_table">Username:</string>
    <string name="actions">Actions</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="view">View</string>
    <string name="placeholder">Placeholder</string>
    <string name="purchased_items">Purchased Items</string>
    <string name="shopping_items">Shopping Items</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="purchase">Purchase</string>
    <string name="basket_items">Basket Items</string>
    <string name="set_in_my_basket">Set In My Basket</string>
    <string name="inBasket">In a basket</string>
    <string name="update">Update</string>
    <string name="your_basket_is_empty">Your basket is empty.</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="add">Add +</string>
    <string name="item_name_should_not_be_empty">WARNING: Item name should not be empty!</string>
    <string name="shop_sync_name">Shop Sync Name</string>
    <string name="shop_sync_description">Shop Sync Description</string>
    <string name="invite_a_user">Invite a User +</string>
    <string name="create">Create</string>
    <string name="enter_email">Enter email</string>
    <string name="create_shop_sync">Create Shop Sync</string>
    <string name="refresh">Refresh</string>
    <string name="undo">Undo</string>
    <string name="remove">Remove</string>
    <string name="warning_quantity">Invalid quantity!</string>
    <string name="warning_price">Invalid price!</string>
    <string name="update_name">Update Name</string>
    <string name="edit_shop_sync">Edit Shop Sync</string>
    <string name="settle_the_cost">Settle the Cost</string>
    <string name="userCosts">User\'s Total Cost</string>
    <string name="cost_per_user">Cost per User</string>
    <string name="shopping_cart">Shopping cart</string>
</resources>