<!-- shopping_item_row.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Editable fields for item name, quantity, and price per unit -->
    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/item_name"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/quantity"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPricePerUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/price_per_unit"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <!-- Purchase button -->
    <Button
        android:id="@+id/buttonPurchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase"/>
</LinearLayout>
