<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextShopSyncDescription"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/shop_sync_description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <LinearLayout
            android:id="@+id/linearLayoutInvitedUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/listViewEditInvitedUsers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextShopSyncDescription">

            <TextView
                android:id="@+id/textViewUserCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder" />

            <Button
                android:id="@+id/buttonInviteUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_a_user" />

        </LinearLayout>

        <ListView
            android:id="@+id/listViewEditInvitedUsers"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonUpdateShopSync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutInvitedUsers"
            tools:ignore="NestedScrolling" />

        <Button
            android:id="@+id/buttonUpdateShopSync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listViewEditInvitedUsers" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
