<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Name of the purchased item -->
    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/placeholder"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Total cost (quantity x price per unit) -->
        <LinearLayout
            android:id="@+id/totalCostLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/pricePerUnitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/totalCostTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />

        </LinearLayout>

        <!-- Undo button -->
        <Button
            android:id="@+id/undoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/undo" />

        <!-- Delete button -->
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>
